kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: learnk8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
        - path: /
          backend:
            serviceName: hello-kubernetes
            servicePort: 8080
        - path: /nginx
          backend:
            serviceName: nginx
            servicePort: 80
